--- a/env/hybrid-cloud-tool/app/templates/resources.html
+++ b/env/hybrid-cloud-tool/app/templates/resources.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Resource Monitoring</h1>
-    <!-- <h2>AWS Resources</h2>
-    <ul id="aws-resources"></ul> -->
+    <h2>AWS Resources</h2>
+    <ul id="aws-resources"></ul>
 
     <h2>Azure Resources</h2>
     <ul id="azure-resources"></ul>
