--- a/env/hybrid-cloud-tool/app/templates/index.html
+++ b/env/hybrid-cloud-tool/app/templates/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Welcome to the Hybrid Cloud Resource Monitoring Dashboard!</h1>
     <a href="{{ url_for('main.resources') }}"><button>Resources</button></a>
+    <a href="{{ url_for('main.aws_resources') }}"><button>AWS Resources</button></a>
     <a href="{{ url_for('main.azure_resources') }}"><button>Azure Resources</button></a>
 </body>
 </html>
